--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -26,31 +26,14 @@
   border-radius: 200px;
 }
 
-.el-table {
-  //overflow-y: scroll !important;
+.el-table--border::after, .el-table--group::after, .el-table::before {
+  display: none;
 }
-
-.el-table::before {
-  //display: none;
-  //left: 0;
-  //bottom: 0;
-  //width: 100%;
-  //height: 1px;
-}
-
- .el-table--border::after, .el-table--group::after, .el-table::before {
-   display: none;
-   //content: "";
-   //position: absolute;
-   //background-color: var(--el-table-border-color);
-   //z-index: 1;
- }
 
 .el-table__body-wrapper {
   .el-table__cell {
 
     .cell {
-      //height: 120px;
       font-family: Ubuntu;
       font-style: normal;
       font-weight: normal;
@@ -121,6 +104,13 @@
   margin-left: 0 !important;
 }
 
+.el-button{
+  >span{
+    display: flex;
+    align-items: center;
+  }
+}
+
 .el-switch__core {
   height: 16px !important;
 }
@@ -133,3 +123,35 @@
 .el-switch.is-checked .el-switch__core .el-switch__action {
   margin-left: calc(3px - var(--el-switch-button-size)) !important;
 }
+
+.el-dialog {
+  border-radius: 24px !important;
+  margin-top: 68px !important;
+}
+
+.el-dialog__header {
+  padding-top: 24px !important;
+  padding-bottom: 0px !important;
+}
+
+.el-dialog__header::after {
+  content: ' ';
+  width: 292px;
+  height: 2px;
+  display: block;
+  background: #1454F2;
+  border-radius: 2px;
+  margin: 14px auto 0;
+}
+
+.el-dialog__title{
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #121212;
+}
+
+
+
