add select for change category to Products.vue

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -11,7 +11,8 @@
 }
 
 .el-popper.is-dark {
-  background: #1454F2 !important;
+  //background: #1454F2 !important;
+  background: linear-gradient(180deg, #7ea8fc 0%, #2662f3 100%) !important;
 }
 
 .el-popper {
