--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,6 +5,105 @@
   padding: 0;
 }
 
+.general-btn {
+  background: linear-gradient(180deg, #6c9af3 0%, #1f5cf3 100%);
+  border-radius: 8px;
+  cursor: pointer;
+  color: #fff;
+  border: none;
+  box-sizing: border-box;
+  transition: all 300ms ease-in-out;
+
+  &:hover {
+    color: #fff;
+    // background: #004aff;
+    background: linear-gradient(180deg, #004aff, #004aff 100%);
+    box-shadow: 5px 5px 15px rgba(0, 74, 255, 0.35), -5px -5px 10px #fafbff;
+    transition: all 300ms ease-in-out;
+  }
+
+  &__not-active {
+    color: #404040;
+    background: none;
+    transition: all 300ms ease-in-out;
+  }
+}
+
+.nav-panel {
+  height: 110px;
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  box-sizing: border-box;
+
+  &__title {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #07103a;
+  }
+  &__setup {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    width: 100%;
+
+    > div:first-child {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    > div {
+      > a {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.general-table {
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  box-sizing: border-box;
+  box-shadow: 10px 0px 10px rgb(0 74 255 / 5%), -5px -5px 10px #fafbff;
+  border-radius: 8px 8px 0 0;
+}
+
+.general-pagination {
+  background: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  box-sizing: border-box;
+  box-shadow: 10px 10px 10px rgba(0, 74, 255, 0.05), -5px -5px 10px #fafbff;
+  border-radius: 0 0 8px 8px;
+  .el-pager {
+    .number {
+      box-sizing: border-box;
+      width: 20px;
+      height: 28px;
+      text-align: center;
+      font-family: Manrope;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      color: #212121;
+      transition: 0.1ms;
+    }
+
+    .active {
+      color: #fff;
+      border-radius: 50%;
+      border: none;
+      background: linear-gradient(210.51deg, #709df3 5.3%, #1757f3 90.07%);
+    }
+  }
+  .el-pagination {
+    --el-pagination-button-width: 28px;
+  }
+}
+
 .el-popper__arrow::before {
   width: 0 !important;
   display: none !important;
@@ -20,7 +119,6 @@
   font-family: Ubuntu;
   font-style: normal;
   font-weight: normal;
-  // inset: 0px auto auto -8px !important;
   font-size: 12px;
   line-height: 20px;
   color: #ffffff;
@@ -49,25 +147,30 @@
       display: flex;
       gap: 8px;
     }
-
-    //height: 120px;
   }
 
   .el-table__row {
-    //height: 120px;
     box-sizing: border-box;
+
+    .el-table__cell:nth-last-child(1){
+      transition: 200ms;
+      opacity: 0;
+    }
+
+    &:hover .el-table__cell:nth-last-child(1){
+      opacity: 1;
+    }
   }
 }
 
 .el-table .el-table__cell {
   padding: 0 0 !important;
   box-sizing: border-box;
- // background-color: transparent !important;
+  // background-color: transparent !important;
 }
 
 .el-table th.el-table__cell.is-leaf {
   border-bottom: none !important;
-  //border-bottom: 1px solid #f0f0f0 !important;
 }
 .el-table__header-wrapper::before {
   content: "";
@@ -80,16 +183,12 @@
   background: rgba(29, 91, 243, 0.39);
   border-radius: 2px;
   border: none;
-  //border-bottom: 1px solid rgba(29, 91, 243, 0.39) !important;
 }
 .el-table__header {
   height: 46px;
 
   > thead {
     > tr {
-      //background: linear-gradient(195.87deg, rgba(0, 67, 255, 0.04) 11.06%, rgba(0, 67, 255, 0) 88.93%);
-      //background: linear-gradient(180.87deg, rgba(0, 67, 255, 0.08) 11.06%, rgba(0, 67, 255, 0) 88.93%);
-
       > th {
         height: 46px;
         font-family: Manrope;
@@ -157,4 +256,47 @@
   background: #1454f2;
   border-radius: 2px;
   margin: 14px auto 0;
+}
+
+.el-dialog--center .el-dialog__body {
+  padding: 25px calc(var(--el-dialog-padding-primary) + 5px) 0 !important;
+}
+
+.el-dialog__headerbtn {
+  .el-dialog__close {
+    > svg {
+      > path {
+        fill: #000000;
+        transition: all 200ms ease-in-out;
+      }
+    }
+  }
+
+  &::before {
+    content: "";
+    width: 75px;
+    height: 75px;
+    background: #7da2fe;
+    border-radius: 1px 23px 1% 100%;
+    position: absolute;
+    top: -20px;
+    left: -38.5px;
+    opacity: 0;
+    //transform: scale(0,0);
+    transition: all 200ms ease-in-out;
+  }
+
+  &:hover {
+    .el-dialog__close {
+      > svg {
+        > path {
+          fill: #fff;
+        }
+      }
+    }
+    &::before {
+      opacity: 1;
+      // transform: scale(1,1);
+    }
+  }
 }
