added the ability to add photos when creating a product

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -152,13 +152,17 @@
   .el-table__row {
     box-sizing: border-box;
 
-    .el-table__cell:nth-last-child(1){
-      transition: 200ms;
-      opacity: 0;
+    .el-table__cell:nth-last-child(1) {
+      .cell {
+        transition: 200ms;
+        opacity: 0;
+      }
     }
 
-    &:hover .el-table__cell:nth-last-child(1){
-      opacity: 1;
+    &:hover .el-table__cell:nth-last-child(1) {
+      .cell {
+        opacity: 1;
+      }
     }
   }
 }
