--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,31 +1,57 @@
 @import "fonts";
-//
+
+//==========================================================
+// Сброс стилей
+//==========================================================
 * {
   margin: 0;
   padding: 0;
 }
+
 * {
   box-sizing: border-box;
 }
+
 li {
   list-style: none;
 }
+body {
+  padding: 0;
+  margin: 0;
+}
+
+//==========================================================
+// Переменные
+//==========================================================
+$md1: 1399.98;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 575.98;
+
+
+//==========================================================
+// Общие стили
+//==========================================================
 .el-popconfirm {
 
   &__main {
     font-family: Manrope, sans-serif;
     color: #6A6A6A;
     line-height: 18px;
+
     & .el-icon {
       display: none;
     }
   }
+
   &__action {
     margin-top: 10px !important;
   }
+
   .el-button {
     font-family: Manrope, sans-serif !important;
     border: none !important;
+
     &--primary {
       background-color: #1454F2 !important;
       transition: background-color 0.3s ease 0s;
@@ -35,6 +61,7 @@ li {
         }
       }
     }
+
     &--text {
       color: #6A6A6A;
       transition: color 0.3s ease 0s;
@@ -46,303 +73,4 @@ li {
     }
   }
 }
-//
-//.general-btn {
-//  background: linear-gradient(180deg, #6c9af3 0%, #1f5cf3 100%);
-//  border-radius: 8px;
-//  cursor: pointer;
-//  color: #fff;
-//  border: none;
-//  box-sizing: border-box;
-//  transition: all 300ms ease-in-out;
-//
-//  &:hover {
-//    color: #fff;
-//    // background: #004aff;
-//    background: linear-gradient(180deg, #004aff, #004aff 100%);
-//    box-shadow: 5px 5px 15px rgba(0, 74, 255, 0.35), -5px -5px 10px #fafbff;
-//    transition: all 300ms ease-in-out;
-//  }
-//
-//  &__not-active {
-//    color: #404040;
-//    background: none;
-//    transition: all 300ms ease-in-out;
-//  }
-//}
-//
-//.nav-panel {
-//  height: 110px;
-//  position: relative;
-//  display: flex;
-//  gap: 10px;
-//  flex-direction: column;
-//  box-sizing: border-box;
-//
-//  &__title {
-//    font-family: Raleway;
-//    font-style: normal;
-//    font-weight: bold;
-//    font-size: 20px;
-//    line-height: 28px;
-//    color: #07103a;
-//  }
-//  &__setup {
-//    display: flex;
-//    align-items: center;
-//    justify-content: space-between;
-//    margin-bottom: 10px;
-//    width: 100%;
-//
-//    > div:first-child {
-//      display: flex;
-//      flex-wrap: wrap;
-//      gap: 10px;
-//    }
-//    > div {
-//      > a {
-//        text-decoration: none;
-//      }
-//    }
-//  }
-//}
-//
-//.general-table {
-//  border: 1px solid rgba(255, 255, 255, 0.4);
-//  box-sizing: border-box;
-//  box-shadow: 10px 0px 10px rgb(0 74 255 / 5%), -5px -5px 10px #fafbff;
-//  border-radius: 8px 8px 0 0;
-//}
-//
-.general-pagination {
-  background: #fff;
-  border: 1px solid rgba(255, 255, 255, 0.4);
-  box-sizing: border-box;
-  box-shadow: 10px 10px 10px rgba(0, 74, 255, 0.05), -5px -5px 10px #fafbff;
-  border-radius: 0 0 8px 8px;
-  .el-pager {
-    .number {
-      box-sizing: border-box;
-      width: 20px;
-      height: 28px;
-      text-align: center;
-      font-family: Manrope;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 12px;
-      color: #212121;
-      transition: 0.1ms;
-    }
 
-    .active {
-      color: #fff;
-      border-radius: 50%;
-      border: none;
-      background: linear-gradient(210.51deg, #709df3 5.3%, #1757f3 90.07%);
-    }
-  }
-  .el-pagination {
-    --el-pagination-button-width: 28px;
-  }
-}
-//
-//.el-popper__arrow::before {
-//  width: 0 !important;
-//  display: none !important;
-//}
-//
-//.el-popper.is-dark {
-//  //background: #1454F2 !important;
-//  background: linear-gradient(180deg, #7ea8fc 0%, #2662f3 100%) !important;
-//}
-//
-//.el-popper {
-//  padding: 10px 20px;
-//  font-family: Ubuntu;
-//  font-style: normal;
-//  font-weight: normal;
-//  font-size: 12px;
-//  line-height: 20px;
-//  color: #ffffff;
-//  border-radius: 200px;
-//}
-//
-//.el-table--border::after,
-//.el-table--group::after,
-//.el-table::before {
-//  display: none;
-//}
-//
-//.el-table__body-wrapper {
-//  .el-table__cell {
-//    .cell {
-//      font-family: Ubuntu;
-//      font-style: normal;
-//      font-weight: normal;
-//      font-size: 14px;
-//      line-height: 18px;
-//      color: #2a2a2a;
-//      box-sizing: border-box;
-//      padding-top: 20px !important;
-//      padding-bottom: 10px !important;
-//
-//      display: flex;
-//      gap: 8px;
-//    }
-//  }
-//
-//  .el-table__row {
-//    box-sizing: border-box;
-//
-//    .el-table__cell:nth-last-child(1) {
-//      .cell {
-//        transition: 200ms;
-//        opacity: 0;
-//      }
-//    }
-//
-//    &:hover .el-table__cell:nth-last-child(1) {
-//      .cell {
-//        opacity: 1;
-//      }
-//    }
-//  }
-//}
-//
-//.el-table .el-table__cell {
-//  padding: 0 0 !important;
-//  box-sizing: border-box;
-//  // background-color: transparent !important;
-//}
-//
-//.el-table th.el-table__cell.is-leaf {
-//  border-bottom: none !important;
-//}
-//.el-table__header-wrapper::before {
-//  content: "";
-//  height: 1px;
-//  width: calc(100% - 40px);
-//  left: 20px;
-//  top: 46px;
-//  z-index: 2;
-//  position: absolute;
-//  background: rgba(29, 91, 243, 0.39);
-//  border-radius: 2px;
-//  border: none;
-//}
-//.el-table__header {
-//  height: 46px;
-//
-//  > thead {
-//    > tr {
-//      > th {
-//        height: 46px;
-//        font-family: Manrope;
-//        font-style: normal;
-//        font-weight: normal;
-//        font-size: 12px;
-//        line-height: 24px;
-//        color: #6a6a6a;
-//      }
-//
-//      .el-table th.el-table__cell.is-leaf {
-//        border-bottom: transparent !important;
-//      }
-//    }
-//  }
-//}
-//
-//.el-pagination {
-//  height: 75px;
-//  display: flex;
-//  align-items: center;
-//  justify-content: center;
-//  box-sizing: border-box;
-//}
-//
-//.el-button + .el-button {
-//  margin-left: 0 !important;
-//}
-//
-//.el-button {
-//  > span {
-//    display: flex;
-//    align-items: center;
-//  }
-//}
-//
-//.el-switch__core {
-//  height: 16px !important;
-//}
-//
-//.el-switch__action {
-//  width: 12px !important;
-//  height: 12px !important;
-//}
-//
-//.el-switch.is-checked .el-switch__core .el-switch__action {
-//  margin-left: calc(3px - var(--el-switch-button-size)) !important;
-//}
-//
-//.el-dialog {
-//  border-radius: 24px !important;
-//  margin-top: 30px !important;
-//}
-//
-//.el-dialog__header {
-//  padding-top: 24px !important;
-//  padding-bottom: 0px !important;
-//}
-//
-//.el-dialog__header::after {
-//  content: " ";
-//  width: 292px;
-//  height: 2px;
-//  display: block;
-//  background: #1454f2;
-//  border-radius: 2px;
-//  margin: 14px auto 0;
-//}
-//
-//.el-dialog--center .el-dialog__body {
-//  padding: 25px calc(var(--el-dialog-padding-primary) + 5px) 0 !important;
-//}
-//
-//.el-dialog__headerbtn {
-//  .el-dialog__close {
-//    > svg {
-//      > path {
-//        fill: #000000;
-//        transition: all 200ms ease-in-out;
-//      }
-//    }
-//  }
-//
-//  &::before {
-//    content: "";
-//    width: 75px;
-//    height: 75px;
-//    background: #7da2fe;
-//    border-radius: 1px 23px 1% 100%;
-//    position: absolute;
-//    top: -20px;
-//    left: -38.5px;
-//    opacity: 0;
-//    //transform: scale(0,0);
-//    transition: all 200ms ease-in-out;
-//  }
-//
-//  &:hover {
-//    .el-dialog__close {
-//      > svg {
-//        > path {
-//          fill: #fff;
-//        }
-//      }
-//    }
-//    &::before {
-//      opacity: 1;
-//      // transform: scale(1,1);
-//    }
-//  }
-//}
