--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,6 +6,7 @@
 * {
   margin: 0;
   padding: 0;
+  outline: none;
 }
 
 * {
@@ -18,6 +19,7 @@ li {
 body {
   padding: 0;
   margin: 0;
+  background-color: #F1F3F4;
 }
 
 //==========================================================
